Fix: horizontal overflow +
  Scrollbars take up space in the viewport;
  thus overflowing containers with width: 100vw.

  Solution: Let CSS Grid handle horizontal sizing

--- a/src/App.css
+++ b/src/App.css
@@ -36,8 +36,6 @@ button:focus {
     "HeaderMenu"
     "Content"
     "Footer";
-  position: absolute;
-  width: 100vw;
   height: 100vh;
 }
 
